feat: 优化文件列表和上传功能，过滤无效条目并增强元数据处理

--- a/admin-imgtc.html
+++ b/admin-imgtc.html
@@ -406,7 +406,13 @@
           fetch(url, opts)
             .then(r => r.json())
             .then(result => {
-              const files = result.keys || [];
+              const invalidPrefixes = ['session:', 'chunk:', 'upload:', 'temp:'];
+              const files = (result.keys || []).filter(file => {
+                if (!file.name) return false;
+                if (invalidPrefixes.some(prefix => file.name.startsWith(prefix))) return false;
+                const metadata = file.metadata || {};
+                return metadata.fileName && metadata.TimeStamp !== undefined && metadata.TimeStamp !== null;
+              });
               const mapped = files.map(file => ({
                 ...file,
                 selected: false,
@@ -969,7 +975,13 @@
           .then(response => response.json())
           .then(result => {
             console.log("result: ", result);
-            const files = result.keys || [];
+            const invalidPrefixes = ['session:', 'chunk:', 'upload:', 'temp:'];
+            const files = (result.keys || []).filter(file => {
+              if (!file.name) return false;
+              if (invalidPrefixes.some(prefix => file.name.startsWith(prefix))) return false;
+              const metadata = file.metadata || {};
+              return metadata.fileName && metadata.TimeStamp !== undefined && metadata.TimeStamp !== null;
+            });
             this.nextCursor = result.list_complete ? null : result.cursor;
             this.tableData = files.map(file => ({
               ...file,
